src/App.css
/* ... */
.ui-button.ui-widget.ui-state-default.ui-corner-all.navButton{
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.2rem;
  background-color: var(--mainColor);
  color: var(--whiteText);
  min-width: 200px;
  max-width: 250px;
  padding: 5px 0;
  border-radius: 0;
  margin-top: 10px;
  border: 2px solid var(--mainColor);
}

 /* {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.2rem;
  background-color: var(--mainColor);
  color: var(--whiteText);
  min-width: 200px;
  max-width: 300px;
  padding: 5px 0;
  border-radius: 0;
  margin-top: 10px;
  border: 2px solid var(--mainColor);
} */

.ui-button.ui-widget.ui-state-default.ui-corner-all.navButton.ui-button-text-only:hover{
  padding: 5px 0;
  border: 2px solid var(--mainColor);
  background-color: var(--mainColor-dark);
  color: var(--whiteText);
}
.ui-button.ui-widget.ui-state-default.ui-corner-all.navButton.ui-button-text-only:focus{
  padding: 5px 0;
  border: 2px solid var(--mainColor);
  background-color: var(--mainColor-dark);
  color: var(--whiteText);
}

.arrow {
  height: 46px;
  width: 46px;
  border: none;
  margin: 2px;
}
.arrow.back.active {
  height: 46px;
  width: 46px;
  background-image: url('./Media/iconmonstr-arrow-4-240back.png');
  background-size:contain;
  background-repeat: no-repeat;
  border: none;
}
.arrow.back.active:hover {
  height: 50px;
  width: 50px;
  margin: 0px
}
.arrow.back {
  height: 46px;
  width: 46px;
  background-image: url('./Media/iconmonstr-arrow-4-240backgrey-50.png');
  background-size:contain;
  background-repeat: no-repeat;
  border: none;
}
.arrow.next.active {
  height: 46px;
  width: 46px;
  background-image: url('./Media/iconmonstr-arrow-4-240.png');
  background-size:contain;
  background-repeat: no-repeat;
  border: none;
}
.arrow.next {
  height: 46px;
  width: 46px;
  background-image: url('./Media/iconmonstr-arrow-4-240grey-50.png');
  background-size:contain;
  background-repeat: no-repeat;
  border: none;
}
.arrow.next.active:hover {
  height: 50px;
  width: 50px;
  margin: 0px
}

/* ---------------------- Intro Page ---------------------- */
.tagline {
  font-family: 'Jaldi', sans-serif;
  font-size: 1.5rem;
  margin: 0;
  text-align: center;
  line-height: 1.6rem;
}
.taglineDiv {
  margin: 1rem auto .5rem auto;
}

.introPageDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 95%;
  margin: 0 auto;
}

.introPageImgWrapper{
  position: relative;
  background-color: #CCC;
  width: 95%;
  height: 26vh;
  align-self: center;
  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.2);
  margin: 10px 0;
  overflow: hidden;
  order: 1;
}

.introPageImage {
  width: 100%;
  height: 100%;
  position: absolute;
  object-position: 50% 40%;
  object-fit: cover;
}

.introPageText {
  line-height: 1.3rem;
  list-style: none;
  padding: 0;
  margin: 10px 5px 0 5px;
  order: 3;
} 
.introPageText li {
  position: relative;
  padding-left: 30px;
  margin-bottom: 25px;
}
.introPageText li:before {
  content: '';
  width: 1.3rem;
  height: 1.3rem;
  position: absolute;
  background-image: url('./Media/pawprint.png');
  background-size: cover;
  background-position: center;
  left: 0;
  top: 25%;
  transform: translateY(-50%);
}
.navButtonDivIntro {
  display: flex;
  order: 2;
  justify-content: center;
  width: 75%;
  margin: 10px auto 15px auto;
}

/* .registerToSaveText {
  font-size: .6rem;
  margin: 0;
  padding: 0;
} */

/* --------------------------- Source Page -------------------------- */
.selectSourcePageDiv {
  width: 90%;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.selectSourcePageImageWrapper{
  position: relative;
  background-color: #CCC;
  width: 100%;
  height: 20vh;
  align-self: center;
  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.2);
  margin: 20px 0;
  overflow: hidden;
  object-fit: cover;
  object-position: 50% 85%;
}
.selectSourcePageImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 50% 85%;
  position: absolute;
}

.sourceQuestionText {
  text-align: center;
  margin: 20px auto;
}
.sourceButton .ui-button-text.ui-c{
  font-size: 1rem;
}
.ui-button.ui-widget.ui-state-default.ui-corner-all.sourceButton{
  color: var(--whiteText);
  margin: 6px 0;
  width: 50%;
  border-radius: 0;
  padding: 8px 0;
  min-width: 200px;
  background-color: var(--mainColor);
  border: 2px solid var(--mainColor);
  font-size: 1.2rem;
}

.ui-button.ui-widget.ui-state-default.ui-corner-all.sourceButton:hover {
  background: var(--mainColor-dark);
  color: var(--whiteText);
  border: var(--mainColor) 2px solid;
  padding: 8px 0;
}
.ui-button.ui-widget.ui-state-default.ui-corner-all.sourceButton:focus {
  background: var(--mainColor-dark);
  color: var(--whiteText);
  border: var(--mainColor) 2px solid;
  padding: 8px 0;
}
.ui-tooltip .ui-tooltip-text {
  font-family: Arial, Helvetica, sans-serif;
  padding: 10px;
  color: var(--darkColor);
  font-size: 0.8rem;
  background-color: var(--tooltipBackground);
  border: 1px solid var(--tooltipBorder);
}

.moreInfoModal {
  display: inline-flex;
  padding-left: 5px;
}
.moreInfoModal:hover {
  cursor: pointer;
}
.ui-dialog .ui-digalog-text {
  font-family: Arial, Helvetica, sans-serif;
  padding: 10px;
  color: var(--darkColor);
  font-size: 0.8rem;
  background-color: #f4f4f4;
  border: 1px solid var(--tooltipBorder);
}
.ui-dialog {
  background-color: var(--tooltipBackground);
}

.dialogInfo {
  font-size: .9rem;
}

.sideNote {
  font-size: 1rem;
  margin: 15px;
}

/* ---------------------- feeling Page ---------------------- */
.feeling-question{
  width: 90%;
  margin: .5rem auto;
  padding-top: 1rem;
  font-size: 150%;
  font-weight: 700;
  text-align: center;
}
.feeling-sideNote{
  width: 90%;
  margin: .5rem auto;
  text-align: center;
  padding-bottom: 1rem;
}

.feeling-array{
  width: 73%;
  margin: 0 auto 20px auto;
}
.feeling {
  width: 100%;
  margin-top: 12px;
}
.label {
  cursor: pointer;
}
/* ... */

